fixed top nav z-index

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,6 @@ html {
 
 #logo {
     height: 50px;
-    opacity: 0.9;
 }
 
 .topnav {
@@ -19,9 +18,10 @@ html {
     position: fixed;
     z-index: 10;
     width: 100%;
+    left: 0;
     border-bottom: 1px solid seashell;
     padding: 10px 0px 0px 10px ;
-    opacity: 0.9;
+    background-color: black;
 }
 
 .topnav nav {
@@ -76,6 +76,7 @@ html {
 
 #mission_statement h2, #mission_statement h4{
     margin: 8px 0;
+    text-align: center;
 }
 
 #featured_tea {
